<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
        android:title="Search"
        android:icon="@drawable/ic_action_name"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.widget.SearchView"
        />

    <item android:id="@+id/filter"
        android:title="Filter"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/profile"
        android:title="Profile"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/logout"
        android:title="Logout"
        app:showAsAction="ifRoom" />



</menu>
