<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/itemName"
        android:layout_width="137dp"
        android:layout_height="119dp"
        android:layout_margin="10dp"
        android:text="Name of good"
        android:gravity="center_vertical|center_horizontal"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Value of good:"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/itemDetail"
            android:text="Status:"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>